# lumen-compiler

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  build.rs  compile_benchmark.sh  compiler_bench.rs
crates/lumen-compiler/: Cargo.toml
crates/lumen-compiler/src/: lib.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: lib.rs
crates/lumen-optimizers/: Cargo.toml  parser_dep.txt
crates/lumen-optimizers/examples/: optimizer_bench.rs
crates/lumen-optimizers/src/: lib.rs
crates/lumen-parser/: Cargo.toml
crates/lumen-parser/examples/: parser_bench.rs
crates/lumen-parser/src/: lib.rs
crates/lumen-wasm/: Cargo.toml
crates/lumen-wasm/src/: lib.rs
examples/: basic.js  benchmark.sh  compile_benchmark  compile_benchmark.rs  compiler_bench  compiler_bench.rs  node_ref_test.rs  performance_report.md  performance_test.sh  react.jsx  simple_test.rs  typescript.ts
lumen-compiler/: Cargo.toml
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/distributed/: mod.rs
src/ffi/: cpp_bindings.rs  mod.rs
src/ffi/cpp/: parser.cpp  parser.h
src/gpu/: mod.rs
tests/: benchmark.rs  compile_speed.js  parser_test.rs
