[package]
name = "lumen-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Lumen JavaScript to WebAssembly compiler"
license = "MIT"

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-parser = { path = "../lumen-parser" }
lumen-optimizers = { path = "../lumen-optimizers" }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
criterion = "0.5.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8.1"
criterion = "0.5.1"

[[example]]
name = "compiler_bench"
path = "examples/compiler_bench.rs" 