[package]
name = "lumen-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Team"]
description = "Compiler core for Lumen"
license = "MIT"

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-parser = { path = "../lumen-parser" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
rayon = "1.8.0" 