[package]
name = "lumen-parser"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Team"]
description = "Parser for Lumen compiler"
license = "MIT"

[dependencies]
lumen-core = { path = "../lumen-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4" 