[package]
name = "lumen-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Lumen Team"]
description = "WebAssembly support for Lumen compiler"
license = "MIT"

[dependencies]
lumen-core = { path = "../lumen-core" }
lumen-compiler = { path = "../lumen-compiler" }
lumen-parser = { path = "../lumen-parser" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
serde_json = "1.0" 